--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -25,6 +25,9 @@ $body-text-color: $lightest !default;
 $button-background-color: $primary !default;
 $button-text-color: if($dark-mode, $darkest, $lightest) !default;
 $button-background-color-hover: scale-color($button-background-color, $lightness: -10% * $multiplier) !default;
+$button-padding: 16px;
+$button-font-size: 18px;
+$button-height: ($button-padding * 2) + $button-font-size;
 
 $button-danger-background-color: $red !default;
 $button-danger-text-color: $white !default;
